static/css/profile.css
@font-face {
    font-family: 'LeagueGothic';
    src: url('fonts/League_Gothic-webfont.eot');
    src: url('fonts/League_Gothic-webfont.eot?#iefix') format('embedded-opentype'),
         url('fonts/League_Gothic-webfont.woff') format('woff'),
         url('fonts/League_Gothic-webfont.ttf') format('truetype'),
         url('fonts/League_Gothic-webfont.svg#LeagueGothicRegular') format('svg');
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: 'SourceSansProLight';
    src: url('fonts/SourceSansPro-Light-webfont.eot');
    src: url('fonts/SourceSansPro-Light-webfont.eot?#iefix') format('embedded-opentype'),
         url('fonts/SourceSansPro-Light-webfont.woff') format('woff'),
         url('fonts/SourceSansPro-Light-webfont.ttf') format('truetype'),
         url('fonts/SourceSansPro-Light-webfont.svg#SourceSansProLight') format('svg');
    font-weight: normal;
    font-style: normal;
}

* {
	margin: 0;
	padding: 0;
}
img{
	border: none;
}

body{
	/* font-family: SourceSansProLight, Verdana, Arial, sans-serif; */
	font-size: 16px;
	background-attachment: fixed;
	background: #0660d4;
	/* fallback for old browsers */
	background: -webkit-linear-gradient(to top, #0b70f5, #8DC26F);
	background: -moz-linear-gradient(to top, #0b70f5, #8DC26F);
	background: -o-linear-gradient(to top, #0b70f5, #8DC26F);
	background: linear-gradient(to top, #0b70f5, #8DC26F);
	background-size: cover;
	background-attachment: fixed;
	font-family: 'Roboto', sans-serif;

}
header h1, nav, nav li{
	display: inline-block;
	margin-top: 7px;
}

header{
	background-color: black;
	height: 70px;
	width: 100%;
	position: fixed;
	/* top: 0;
	right: 0;
	left: 0; */
	box-shadow: 0px 0px 10px rgba(0,0,0,.8);
	z-index: 100;
	border-bottom: 0px solid #C10021;
}

header h1 a{
	font-family: LeagueGothic, Verdana, Arial, sans-serif;
	color: white;
	text-decoration: none;
	text-transform: uppercase;
	font-weight: normal;
	font-size: 40px;
	position:absolute;
	top:10px;
	float: left;
	margin-left: 30px;
}

nav{
	position: fixed;
	margin-inline-start: 20%;
	display: inline;

}

#navelements {
	position: fixed;
	top: 25px;
	right: 10px;
	display: inline-block;
}

.category{
	position: fixed;
	top: 20px;
	left: 225px;
	display: inline-block;
}

.username,.loginsignup,.username :hover{
	display: inline;
	background-color: transparent;
	color: cyan;
}

nav li a{
	color: white;
	text-decoration: none;
	font-family: Verdana, Arial, sans-serif;
	font-size: 17px;
	display: inline;
	padding-left: 15px;
	padding-right: 15px;
	padding-top: 5px;
	padding-bottom: 5px;
}
nav li a:hover{
	background-color: #a6aaac;
	border-radius: 3px;
	color: black;
}
.current{
	background-color: #383838;
	border-radius: 3px;
}

section .imglink{
	color: black;
	
}
section{
	width: auto;
	display: inline-block;
	margin: auto;
	margin-top: 60px;
}
#secwrapper{
	display: inline-block;
	text-align: center;
	margin-bottom: 5%;
} 
article{
	width: 420px;
	display: inline-block;
	vertical-align: top;
	text-align: left;
	border: 1.2px solid #bbbbbb;
	margin: 20px;
	padding: 7px;
	border-radius: 3px;
	box-shadow: 0 2px 3px rgb(44, 44, 44);
	background-color: white;
}

.readmore{
	background-color: black;
	padding: 5px 10px;
	color: white;
	font-weight: bold;
	border-radius: 3px;
	display: inline-block;
}
.readmore:hover{
	background-color: #383838;
}
article p{
	margin-bottom: 7px;
	font-weight: bold;
}

#photobox img{
	margin: 5px 4px 6px 6.5px;
	border: 1px solid black;
}

#featured{
	position: relative;
	background-image:url("/static/imgs/bkgd.jpg")
}

#featuredico{
	position: absolute;
	top: 0;
	left: 0;
}

footer{
	background-color: black;
	height: 50px;
	color: white;
	position: fixed;
	position: fixed;
    bottom: 0;
    width: 100%;
}
footer p{
	margin: 5px 0 0 12%;
}

input[type=submit] {
    width: 35%;
	/* background-color: #0252ff; */
	background: #8d8d8d;
    color: white;
	padding: 6px;
	font-weight: bold;
    border-radius: 5px;
    cursor: crosshair;
}

.red:checked + label:before {
	top: -4px;
	left: -3px;
	width: 12px;
	height: 22px;
	border-top: 2px solid transparent;
	border-left: 2px solid transparent;
	border-right: 2px solid red; /* You need to change the colour here */
	border-bottom: 2px solid red; /* And here */
	-webkit-transform: rotate(40deg);
	-moz-transform: rotate(40deg);
	-ms-transform: rotate(40deg);
	-o-transform: rotate(40deg);
	transform: rotate(40deg);
	-webkit-backface-visibility: hidden;
	-webkit-transform-origin: 100% 100%;
	-moz-transform-origin: 100% 100%;
	-ms-transform-origin: 100% 100%;
	-o-transform-origin: 100% 100%;
	transform-origin: 100% 100%; 
}

h3{
	font-family: 'Roboto', sans-serif;
	margin-top: 20px;
	font-weight: bold;
	padding-left: 30px;
	position: absolute;
	font-size: 18pt;
	color: white;
  }

h4{
    font-weight: bolder;
	color: #ffffff;
	position: absolute;
	font-size: 17pt;
	margin-top: 100px;
}

h5{
	font-weight: bolder;
	color: #ffffff;
	font-size: 16pt;
}

h6{
	font-weight: bolder;
	color: #ffffff;
	font-size: 13pt;
}

.savebtn{
	margin-top: 120px;
	text-align: center;
}

input[type="submit"] {
	font-size: .9em;
	color: rgb(0, 0, 0);
	background: #03c554;
	border: 1px solid #03c554;
	cursor: pointer;
	padding: 10px;
	-webkit-appearance: none;
	width: 20%;
  }
  
  input[type="submit"]:hover {
	-webkit-transition: .5s all;
	-moz-transition: .5s all;
	-o-transition: .5s all;
	-ms-transition: .5s all;
	transition: .5s all;
	background: rgb(5, 235, 63);
  }

.category_name{
	vertical-align: top;
	display: inline-block	;
	position: relative;;
	top: 130px;
	padding: 20px;
	margin-left: 6.4%;
	/* border-style: solid;	 */
	margin-bottom: 50px;

}

.category-source{
	display: block;
	padding-left: 30px;
	text-align: left;
}

.source_name{
	margin-left: -30px;
	display: block;
	margin-top: 10px;
	padding-right: 30px;
	padding-top: 20px;
	padding-bottom: 20px;
}

.source_checkbox{
    display: inline-block;
    position: relative;
    padding-left: 35px;
    margin-bottom: 12px;
    cursor: pointer;
    font-size: 22px;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

/* Hide the browser's default checkbox */
.source_checkbox input{
    position: absolute;
    opacity: 0;
    cursor: pointer;
    height: 0;
    width: 0;
}
/* Create a custom checkbox */
.custom_checkmark {
    position: absolute;
    height: 20px;
    width: 20px;
    margin-top: 5px;
    background-color: rgb(233, 227, 227);
}

/* When the checkbox is checked, add a blue background */
.source_checkbox input:checked ~ .custom_checkmark {
    background-color: rgb(255, 0, 0);
}
/* Create the checkmark/indicator (hidden when not checked) */
.custom_checkmark:after {
    content: "";
    position: absolute;
    display: none;
}
/* Show the checkmark when checked */
.source_checkbox input:checked ~ .custom_checkmark:after {
    display: block;
}
/* Style the checkmark/indicator */
.source_checkbox .custom_checkmark:after {
    left: 6px;
    top: 3px;
    width: 5px;
    height: 10px;
    border: solid rgb(255, 255, 255);
    border-width: 0 3px 3px 0;
    transform: rotate(45deg);
}

  /* The container for custom checkbox */
.container {
    display: block;
    position: relative;
    padding-left: 35px;
    margin-bottom: 12px;
    cursor: pointer;
    font-size: 22px;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.container h6{
	color: #ff0000;
	font-size: 11.5pt;	
	margin-left: -30px;
}

#featured h5{
	color: black;
	font-size: 11.5pt;
	padding-left: 5px;
}

#featured h6{
	color: black;
	font-family: Arial, Helvetica, sans-serif;
	display: inline-block;
	font-size: 14pt;
	padding: 5px;
}

#removebtn{
	font-size: 11pt;
	background-color: red;
	color: white;
	margin-left: -30px;
	border: none;
}

